Bug 1242347 - Allow unsized internal format when generate mipmap. r=jgilbert